[package]
name = "devenv-manager"
version = "0.1.0"
description = "A lightweight developer environment file manager."
authors = ["Garyindex"]
edition = "2021"

[lib]
name = "devenv_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
ignore = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
